# starbase

./: README.md
ImageCloudv1/: makefile
ImageCloudv1/BE/: Cargo.toml
ImageCloudv1/BE/src/: main.rs
ImageCloudv1/BE/src/handlers/: hello.rs  hello2.rs  list_images.rs  mod.rs  resizing_image.rs  retrieve_image.rs
ImageCloudv1/BE/src/views/: index.hbs  prueba.hbs
ImageCloudv1/FE/: astro.config.mjs  htmx-plugin.js  package-lock.json  package.json
ImageCloudv1/FE/src/: headers.js
ImageCloudv1/FE/src/pages/: index.astro
cloudflare-qwik-deployment/: README.md  package-lock.json  package.json
cloudflare-qwik-deployment/apps/qwik-deployment/: package.json  project.json  vite.config.ts
old-pc/image_cloud/: Cargo.toml
old-pc/image_cloud/src/: main.rs
old-pc/insfrastructure/metallb/: kustomization.yaml  pool.yaml
old-pc/insfrastructure/server_one/: server_one.txt  server_one.yml  server_one_ingress.yml  server_one_services.yml
old-pc/insfrastructure/traefik/: values.yml
old-pc/insfrastructure/traefik/dashboard/: ingress.yaml  middleware.yaml  secret-dashboard.yaml
old-pc/nginx_proxy/: docker-compose.yml
old-pc/nginx_proxy/data/: database.sqlite  keys.json
old-pc/pi_hole/: docker-compose.yml
old-pc/pi_hole/etc-dnsmasq.d/: 05-pihole-custom-cname.conf
old-pc/pi_hole/etc-pihole/: custom.list  pihole-FTL.conf  pihole-FTL.db  setupVars.conf  setupVars.conf.update.bak
old-pc/server_one/: Cargo.toml  Dockerfile
old-pc/server_one/src/: main.rs
old-pc/server_two/: Cargo.toml  Dockerfile
old-pc/server_two/src/: main.rs
(+7 files in other folders)
