[package]
name = "image_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.30"
handlebars = "4.5.0"
lazy_static = "1.4.0"
magick_rust = "0.19.1"
mongodb = "2.8.0"
ntex = { version = "0.7.13", features = ["tokio", "openssl"] }
ntex-bytes = "0.1.21"
ntex-cors = "0.4.0"
reqwest = "0.11.22"
serde = "1.0.193"
tokio = "1.35.1"


[workspace]


[[bin]]
name="image_cloud"
path="src/main.rs"
