[package]
name = "image_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.12.0"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
